--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,50 @@
 name: Deployment
+
 on:
   push:
     branches:
       - main
       - dev
+
 env:
-  env.MONGODB_DB_NAME: gha-test
+  MONGODB_DB_NAME: gha-test
+
 jobs:
   test:
+    env:
+      MONGODB_CLUSTER_ADDRESS: cluster0.tmkwl41.mongodb.net
+      MONGODB_USERNAME: hussi_db_user
+      MONGODB_PASSWORD: Hussi@503
+      PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: npm-deps-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: npm ci
+
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:XYZ
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
+
       - name: Run tests
         run: npm test
+
       - name: Output information
-        run: echo "..."
+        run: echo "MONGODB_USERNAME: $MONGODB_USERNAME"
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Output information
-        run: |        
-          echo "..."
+        run: |
+          echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
+          echo "MONGODB_DB_NAME: $MONGODB_DB_NAME"
