--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,16 +32,14 @@ jobs:
         run: npm ci
 
       - name: Run server
-        run: |
-          npm start & npx wait-on http://127.0.0.1:$PORT
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
 
       - name: Run tests
         run: npm test
 
       - name: Output information
-        run: |
-          echo MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}
-          echo MONGODB_DB_NAME: $MONGODB_DB_NAME
+        run: echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
+
 
   deploy:
     needs: test
@@ -49,5 +47,5 @@ jobs:
     steps:
       - name: Output information
         run: |
-          echo MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}
-          echo MONGODB_DB_NAME: $MONGODB_DB_NAME
+          echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
+          echo "MONGODB_DB_NAME: $MONGODB_DB_NAME"
