--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,14 @@ on:
       - dev
 
 env:
-  MONGODB_DB_NAME: sample_mflix
+  MONGODB_DB_NAME: gha-demo
 
 jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.tmkwl41.mongodb.net
       MONGODB_USERNAME: hussi_db_user
-      MONGODB_PASSWORD: Hussi@503
+      MONGODB_PASSWORD: IiIaRqgSQMcSIThM
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
