--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.tmkwl41.mongodb.net
       MONGODB_USERNAME: hussi_db_user
-      MONGODB_PASSWORD: IiIaRqgSQMcSIThM
+      MONGODB_PASSWORD: Hussi@503
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
